# school

./: .gitignore  .gitmodules  .oct2903.c.swp  README.md  a.out  arithmetic_operations.c  asm.c  asm.s  days.c  fiddle.c  grades.c  list.cpp  pattern_circle.cpp  run  sets.py  tax.c
Nov22/: paritycheck  paritycheck.c
Nov24/: nov2404.c  nov2406.c  nov2407.c
algorithms/: arrays.cpp
assembly/asm_programs/: adder.asm  series_sum.asm
assignment/: armstrong.c  bindec.c  calendar.c  si.c  sum.c  sum2.c
compiler_design/: README.md
computer_organisation/: README.md
data_structures/problems/: reverse_at_period.cc
dec10/: arithmetic_parser  arithmetic_parser.cpp
dec12/: arithmetic.c  grades.c  salary.c
dec24/: pallindrome.c
dec28/: odd_even_s.c  rangedmul.c  seq.c  seq_r.c  series_s.c
digital_circuits/: README.md
digital_design/: .arithmetic.cpp.swp  CMakeLists.txt  \  alu.cpp  alu.hpp  arithmetic.cpp  logic_gates.hpp  main.cpp  multiplexer.cpp  types.hpp
digital_design/sem2/: test.c  test.s
graph_theory/: Cargo.toml
graph_theory/src/: havel_hakimi.rs  main.rs
graphics/: CMakeLists.txt  README.md  readme.md  shell.nix
graphics/.cache/clangd/index/: main.cc.CD58E2118E5FCA99.idx
graphics/src/: main.cc
jan14-21/: fact.c  fib.c  hello.c  mul.c  numdigits.c  pallindrome.c  pattern.c  prime.c  rev.c  sequence.c  sum.c
jan21/: div.c  evensum.c  fib.c  largest.c  oddev.c  pattern.c
mathematics/: README.md
maths/: .frequency.py.swp  frequency.py
nov03/: a.out  div.c  nov0301.c  nov0302.c  temp.c
nov12/: a.out  equal  maximum.c  min  minimum.c  vote.c
oct29/: oct2904.c
oops/: Makefile  compile_commands.json  shell.nix
oops/inc/ds/: list.hpp
oops/inc/util/: result.hpp
oops/src/ds/: list.cc
operating_system/: README.md
operating_system/unix-like/bash_scripts/: factorial.sh
practicals-2/: arrays.c  bubblesort.c  fact.c  mat3.c  minmax.c  sort.c  students.c  studunion.c  swap.c  test.c
sem1/: ziolib.h
sem1/Nov22/: grades  grades.c
sem1/Nov24/: .nov2408.c.swp  nov2401.c  nov2402.c  nov2403.c  nov2405.c  nov2408.c  nov2409.c
sem1/jun12/: pattern.c  pointer.c  student.c
sem1/nov03/: floatarith.c  intarith.c  simpleinterest.c  squarea.c  triangle.c
sem1/nov12/: equal.c  max  vote
sem1/oct29/: oct2901.c  oct2902.c  oct2903.c  oct2905.c
sem1/testDec03/: circle.c  salary.c
sem2/dsa/: bubble_sort.cpp  driver  insertion_sort.cpp  main.cpp  matrices.cpp  msort.py  run  search.cpp  selection_sort.cpp  sort.cpp  stack  stack.cpp  stack2.cpp  test.cpp  zutils.hpp
sem2/dsa/linked_lists/: linked_list  linked_list.cpp
sem2/dsa/queues/: arr_queue  arr_queue.cpp
sem2/dsa/searching/: lsearch.cpp
sem2/dsa/sorting/: bsort.cpp  isort.cpp  msort.cpp  quicksort.cpp  ssort.cpp
sem2/may20/: print.c
sem2/misc/: arrays.cpp  dayname.cpp  gtst.cpp  larg.cpp  list.cpp  matrices.cpp  mulints.cpp  sum.cpp  sum_ctr.cpp  test.cpp
sem2/oop/: fib.cpp
sem3/: automata  automata.cpp
sem3/java/: AbstractVolume.java  AreaTriangle.java  CircleArea.java  ComplexArithmetic.java  EmployeeDetails.java  EmployeeInfo.java  EmployeeInheritance.java  EmployeePrint.java  MatrixArithmetic.java  NumbersToWords.java  ProductDetails.java  QueueInterface.java  RectSquare.java  SalaryInWords.java  SumAverage.java  TrianglePerimeterArea.java  VowelCount.java
sem3/java/applets/: Arcs.java  BarChart.java  Circles.java  Ellipses.java  Face.java  LineChart.java  Lines.java  Rectangles.java  Square.java  (+1 more)
sem3/toc/: CMakeLists.txt  automaton.c  d_f_automaton.c  d_f_automaton.h  main.c  state.h  turing_machine.c  utils.c  utils.h
sem3/web/: date.html  day.html  digitsum.html  inputValidator.html  jan_20.html  jan_25.html  list.html  login.html  marksheet.html  marksother.html  orderedlist.html  primecheck.html  sum.html  unorderedlist.html
sem4/nasc/: lagrange_interpolation.py
sem4/system_software/: grammar.c  lexer.c  utils.h
structs/: \  employee.h  employee.h.gch  linked_list.cpp  list.c  list.h  list.h.gch  main.c  zutils.h  zutils.h.gch
testDec03/: alnum.c  choco.c  marks.c  sum.c
utils/: zio.c  zio.h  zio.h.gch
web_technologies/: README.md
zlibc/: README.md  stdinc.h
zstd/: main.cpp  zdef.hpp  zhash.hpp
(+45 files in other folders)
